--- a/readme.org
+++ b/readme.org
@@ -1,8 +1,8 @@
-* About
+* stm32 on Nix
 
-This is a minimal template for STM32F103RB development with PlatformIO.
+This is a minimal template for STM32F103RB development with PlatformIO and Emacs.
 
-* Initialization
+** Initialization
 
 To use a template, you can use the nix flake init command and specify the template with the --template flag:
 
@@ -22,11 +22,44 @@ user.extraGroups = [ "plugdev" "dialout" ];
 services.udev.packages = [ pkgs.openocd ];
 #+end_src
 
-* Usage
+** Usage
 
 `nix develop`: drops you into a shell with the platformIO package and required C dependencies
 #+begin_src sh
 nix develop
 #+end_src
 
-Additional header files not included in the platformIO core are in `./include`
+Additional CMSIS header files not found in the platformIO core are in `./include`, which are helpful for UART/USART
+
+*** Emacs
+
+Create .ccls:
+#+begin_src sh
+pio project init --ide emacs --board nucleo_f103rb
+#+end_src
+.ccls_cache should now be created
+
+The libraries which are added, installed or used in the project after generating process won’t be reflected in IDE.
+To fix it you need to reinitialize project using:
+#+begin_src sh
+pio project init
+#+end_src
+
+Create a .compile_commands.json file:
+#+begin_src sh
+pio run --target compiledb
+#+end_src
+
+While in a C/C++ buffer, to read .compile_commands.json:
+#+begin_src elisp
++cc/reload-compile-db
+#+end_src
+
+Restart your lsp server:
+#+begin_src elisp
+lsp-restart-workspace
+#+end_src
+
+** TODO
+- Add support for native builds using CMake
+- Add UART/USART over onboard ST-Link for Nucleo64 dev boards
